[gd_scene load_steps=6 format=3 uid="uid://djy5m8n3k2qwp"]

[ext_resource type="Script" path="res://scripts/generation/cave_world.gd" id="1"]
[ext_resource type="Script" path="res://scripts/generation/cave_generator.gd" id="2"]
[ext_resource type="TileSet" uid="uid://cvu7x2h8n5qfp" path="res://resources/tilesets/cave_tileset.tres" id="3"]
[ext_resource type="Script" path="res://scripts/systems/mycelium_manager.gd" id="4"]
[ext_resource type="TileSet" uid="uid://xp231867npb4" path="res://resources/tilesets/mycelium_tileset.tres" id="5"]

[node name="CaveWorld" type="Node2D"]
script = ExtResource("1")

[node name="CaveGenerator" type="Node" parent="."]
script = ExtResource("2")
cave_width = 100
cave_height = 60
initial_wall_probability = 0.45
smoothing_iterations = 5
wall_survival_threshold = 4
wall_birth_threshold = 5
use_noise_overlay = true
noise_influence = 0.3
noise_scale = 0.05
nutrient_vein_density = 0.15
nutrient_vein_cluster_size = 3
ensure_connectivity = true
min_open_area_size = 20

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("3")

[node name="MyceliumManager" type="Node2D" parent="."]
script = ExtResource("4")
growth_interval = 2.0
spread_chance = 0.7
max_spread_per_tick = 3
initial_placement_cost = 10
starting_nutrients = 50

[node name="MyceliumLayer" type="TileMapLayer" parent="MyceliumManager"]
tile_set = ExtResource("5")
